--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   line-height: 1.6;
-  color: #ffffff;
+  color: #1a1a1a;
   font-size: 1.6rem;
   overflow-x: hidden;
 }
